fixing alignment styling

--- a/src/components/experiment-tracking/run-metadata/animation.scss
+++ b/src/components/experiment-tracking/run-metadata/animation.scss
@@ -1,8 +1,8 @@
 $animation-timing: 0.2s;
 
 // animation for the first run when switching the comparison view
-.details-dataset__value,
-.details-dataset__value-header,
+.details-dataset__value--first-run,
+.details-dataset__value-header--first-run,
 .details-metadata__run--first-run,
 .details-dataset,
 .details-metadata {
@@ -10,8 +10,8 @@ $animation-timing: 0.2s;
   transition: transform $animation-timing ease-out;
 }
 
-.details-dataset__value--comparision-view,
-.details-dataset__value-header--comparision-view,
+.details-dataset__value---first-run-comparision-view,
+.details-dataset__value-header---first-run-comparision-view,
 .details-metadata__run--first-run-comparision-view {
   transform: translateX(-40%);
   transition: transform $animation-timing ease-out;
